force-app/main/default/objects/Opportunity/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <label>Check-Out Date</label>
    <type>Date</type>
</CustomField>