force-app/main/default/objects/Opportunity/fields/cUnite__Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Check_In_Date__c</fullName>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>