force-app/main/default/objects/Opportunity/fields/cUnite__Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>