force-app/main/default/objects/Opportunity/fields/cUnite__Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Number_of_Nights__c</fullName>
    <label>Number of Nights</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <formula>cUnite__Check_Out_Date__c - cUnite__Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>