force-app/main/default/objects/Opportunity/fields/cUnite__Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Special_Requests__c</fullName>
    <label>Special Requests</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>