force-app/main/default/objects/Opportunity/fields/Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights__c</fullName>
    <label>Number of Nights</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <formula>Check_Out_Date__c - Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>